added javadoc debug example